# agentDemo

./: .gitignore  DEMO.md  README.md  download_image.py  main.py  ollama  pyproject.toml  test.sh  test2.sh  test3.sh  test_images.sh
app/: chroma_store.py  config.py  embeddings.py  init.py  llm_agent.py  utils.py
